--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,28 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>spring-mock-mvc</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+
+			<groupId>javax.validation</groupId>
+
+			<artifactId>validation-api</artifactId>
+
+		</dependency>
+
+		<dependency>
+
+			<groupId>org.hibernate</groupId>
+
+			<artifactId>hibernate-validator</artifactId>
+
+			<version>6.1.5.Final</version>
+
 		</dependency>
 	</dependencies>
 
